--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <es-menu></es-menu>
 <div class="container" style="margin-top: 70px;">
   <h1>Welcom toEasySnack</h1>
+  version master 1.0
   <es-menu-bouffes></es-menu-bouffes>
 </div>
