--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,4 @@
 test
 test git stash
 1- la premiere ligne
-2- la le lo 
-3- la ligne 3
-4- ligne quatre
-5- ligne cinq
-6- ligne 6
-7- ligne 7
+2- la deuxième ligne : branch v2
